# Git_Basic_SkyPro

./: README.md  pyproject.toml
data/: names.txt
src/: main.py
test/: test_main.py
